# nanda

./: .clang-format  .gitignore  CMakeLists.txt
apps/: CMakeLists.txt
apps/devdriver/: CMakeLists.txt
apps/devdriver/src/: main.cc
libs/: CMakeLists.txt
libs/nanda/: CMakeLists.txt
libs/nanda/include/nanda/: concepts.hh  extents.hh  index_algos.hh  index_types.hh  ndarray.hh  rank.hh  span.hh  utility.hh
libs/nanda/tests/: CMakeLists.txt  index_algos_test.cc  rank_test.cc  span_test.cc
